# MyRepository

./: README.md
Depo_to_Vis/: main.cc
FineStructure/Gaussian_Dis/: main.cc
FineStructure/Resolution_Convolution/: main.cc
FineStructure/Resolution_Convolution_Ratio/: Convolution_Spec.root  Ratio_Convolution_Spec.root  main.cc
FineStructure/SummationSpectrum/FineStructure/: main.cc
Gaussian_Dis/: main.cc
Resolution_Convolution/: main.cc
SummationSpectrum/: CMakeLists.txt  README.md  main.cc
SummationSpectrum/FineStructure/: main.cc
SummationSpectrum/include/: BetaDecayBranch.hh  BetaDecayInput.hh  FissionInput.hh  InitializeInput.hh  Input.hh  IsotopeSpectrum.hh
SummationSpectrum/input/: 235U.csv  238U.csv  239Pu.csv  241Pu.csv  SNF.txt  SNF131mTe.txt
SummationSpectrum/src/: BetaDecayBranch.cc  BetaDecayInput.cc  FissionInput.cc  InitializeInput.cc  Input.cc  IsotopeSpectrum.cc
